src/Base/main/default/objects/ProductLotReservation__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lot</label>
    <referenceTo>GMBLASERP__Lot__c</referenceTo>
    <relationshipLabel>ProductLotReservation</relationshipLabel>
    <relationshipName>ProductLotReservation</relationshipName>
    <type>Lookup</type>
</CustomField>