src/Base/main/default/objects/ProductLotReservation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>ProductLotReservation</relationshipLabel>
    <relationshipName>ProductLotReservation</relationshipName>
    <type>Lookup</type>
</CustomField>