src/Base/main/default/objects/ProductLotReservation__c/fields/temp_lot_name__c.field-meta.xml
<CustomField>
    <fullName>temp_lot_name__c</fullName>
    <label>temp lot name</label>
    <length>6</length>
    <type>Text</type>
</CustomField>